Things i could have done to improve my submission

--- a/index.Rmd
+++ b/index.Rmd
@@ -11,7 +11,7 @@ output:
 
 ```{r global_options, include=FALSE}
 knitr::opts_chunk$set(echo=TRUE, warning=FALSE, message=FALSE)
-setwd("C:/Users/Ed/datasciencecoursera/Practical Machine Learning")
+setwd("C:/Users/Ed/datasciencecoursera/PracticalMachineLearning")
 ```
 
 ### Synopsis
@@ -109,7 +109,7 @@ rfor_fitall = train(classe ~ ., data=train_set, method="rf", trControl=ctrl)
 ```
 
 ###Assessing Model Accuracy
-We examine the model for its accuracy and we finid it to be very accurate.
+We examine the model for its accuracy and we find it to be very accurate.
 ```{r, mod1out, results= 'asis'}
 library(knitr)
 print(kable(rfor_fitall$results))
@@ -129,7 +129,7 @@ The table below shows which predictions on the training dataset and the validati
 print(kable(In_SampleErr))
 ```
 
-The prediction on the the first test dataset was 99% accurate. it misclassified only 40 out of a possible 5,886 entries.
+The prediction on the the first test dataset was 99% accurate. it misclassified only 40 out of a possible 5,886 entries for an overall misclassification rate of **0.68%**.
 
 ```{r, AccErr2, results='asis'}
 print(kable(out_of_SampleErr))
@@ -143,7 +143,7 @@ print(kable(Model_accuracy$byClass))
 
 The plot below shows the relationship between the number of randomly selected predictors and the accuracy. Accuracy is highest when mtry, the number of variables available for splitting at each tree node is 27. mtry is the tuning parameter for the package rf in caret.
 
-```{r, Accplot, fig.width=6, fig.height=3}
+```{r, Accplot, fig.width=6, fig.height=4}
 plot(rfor_fitall)
 ```
 
@@ -160,8 +160,9 @@ We compare the more important features to those which are highly correlated and 
 cor_mat <- cor(train_set[,-53])
 Cor_Sum <- summary(cor_mat[upper.tri(cor_mat)])
 highcor <- findCorrelation(cor_mat, cutoff = .75)
-highcor_Vars <-  as.data.frame(names(train_set)[highcor])
-highcor_Vars
+highcor_Vars <-as.data.frame(names(train_set)[highcor])
+names(highcor_Vars) <- "Hi_Corr_Vars"
+print(kable(highcor_Vars))
 ```
 
 **Can  we do just as well with 20 features?**
@@ -174,7 +175,17 @@ rfor_fit20 = train(classe ~ yaw_belt + pitch_forearm + magnet_dumbbell_z + pitch
 ```{r, model27, results='asis', warning=FALSE, message=FALSE}
 pred_Vset20 <- predict(rfor_fit20, newdata = test_set1)
 Model_accuracy20 <- confusionMatrix(pred_Vset20, test_set1$classe)
+```
+
+**Model with all the variables as predictors**
+
+```{r, CompModelall, results='asis', warning=FALSE, message=FALSE}
 print(kable(Model_accuracy$byClass))
+```
+
+**Model with 20 variables**
+
+```{r, CompModel20, results='asis', warning=FALSE, message=FALSE}
 print(kable(Model_accuracy20$byClass))
 ```
 
@@ -186,12 +197,13 @@ ctrl <- trainControl(method="repeatedcv", number=5, repeats=2)
 rfor_fit8 = train(classe ~ yaw_belt + pitch_forearm + magnet_dumbbell_z + pitch_belt + magnet_dumbbell_y + gyros_belt_z + magnet_belt_x + yaw_arm, data=train_set, method="rf", trControl=ctrl)
 ```
 
-**The results were still impressive. If you recall the plot above, 2 randomly selected predictors was able to achieve a slightly lower accuracy compared to one with 27**.
 ```{r, predmodel8, results='asis', warning=FALSE, message=FALSE}
 pred_testset8 <- predict(rfor_fit8, newdata = test_set1)
 Model_accuracy8 <- confusionMatrix(pred_testset8, test_set1$classe)
 print(kable(Model_accuracy8$byClass))
 ```
+
+**The results were still impressive. If you recall the plot above, 2 randomly selected predictors was able to achieve a slightly lower accuracy compared to one with 20**.
 
 **Let's try a model with 4 features**.
 ```{r, TWOfeaturemodel, cache=TRUE, results='hide', warning=FALSE, message=FALSE}
@@ -204,19 +216,61 @@ Model_accuracy4 <- confusionMatrix(pred_testset4, test_set1$classe)
 print(kable(Model_accuracy4$byClass))
 ```
 
-**Specificity and sensitivity dipped a bit but a model with 4 features has better interpretability, scalability and faster processing**.
+**Sensitivity  dipped considerably but specificity is still up there. A model with 4 features has better interpretability, scalability and faster processing**.
 
 ###Predicting on the second Test Set
 **we now compare the model with all the variables and the one with 4 only on the second test set.**
 ```{r, test2pred, results='asis'}
-print(kable(Model_accuracy$byClass))
-print(kable(Model_accuracy4$byClass))
+pred_testsetall_2 <- predict(rfor_fitall, newdata = test_set2)
+Model_accuracyall_2 <- confusionMatrix(pred_testsetall_2, test_set2$classe)
+pred_testset4_2 <- predict(rfor_fit4, newdata = test_set2)
+Model_accuracy4_2 <- confusionMatrix(pred_testset4_2, test_set2$classe)
 ```
-Sensitivity suffered a bit but Specificity is still up there.
+
+**Model with all variables as predictors**
+
+```{r, CompSecT, results='asis', warning=FALSE, message=FALSE}
+print(kable(Model_accuracyall_2$byClass))
+```
+
+**Model with 4 predictors**
+
+```{r, CompSecT2, results='asis', warning=FALSE, message=FALSE}
+print(kable(Model_accuracy4_2$byClass))
+```
+
+**Sensitivity suffered a bit but Specificity is still up there. Removing some of the predictors increased bias, which reduced our capacity to predict accurately.**
 
 ###Conclusions
+Predictive models on the HAR weight lifting exercises dataset   classified errors and correct execution of lifting barbells with high accuracy, sensitivity and specificity. It has to be pointed out however, that the errors in movement were performed purposefully.  Different results may be obtained when the errors are committed without intent to commit the error. 
 
-Predictive models on the HAR weight lifting exercises dataset   classified errors and correct execution of lifting barbells with high accuracy, sensitivity and specificity. It has to be pointed out however, that the errors in movement were performed purposefully.  Different results may be obtained when the errors are committed without intent to commit the error.  
+###Misclassified points by the model with all variables on the 2nd test set
+```{r, correctplotall, fig.width=6, fig.height=4}
+correctall <- pred_testsetall_2 == test_set2$classe
+qplot(pitch_forearm,magnet_dumbbell_z,colour=correctall,data=test_set2)
+```
+
+###Misclassified points by the model with 20 variables on the 2nd test set
+```{r, correctplot20, fig.width=6, fig.height=4}
+pred_testset20_2 <- predict(rfor_fit20, newdata = test_set2)
+Model_accuracy20_2 <- confusionMatrix(pred_testset20_2, test_set2$classe)
+correct20 <- pred_testset20_2 == test_set2$classe
+qplot(pitch_forearm,magnet_dumbbell_z,colour=correct20,data=test_set2)
+```
+
+###Misclassified points by the model with 8 variables on the 2nd test set
+```{r, correctplot8, fig.width=6, fig.height=4}
+pred_testset8_2 <- predict(rfor_fit8, newdata = test_set2)
+Model_accuracy8_2 <- confusionMatrix(pred_testset8_2, test_set2$classe)
+correct8 <- pred_testset8_2 == test_set2$classe
+qplot(pitch_forearm,magnet_dumbbell_z,colour=correct8,data=test_set2)
+```
+
+###Misclassified points by the model with 4 variables on the 2nd test set
+```{r, correctplot4, fig.width=6, fig.height=4}
+correct4 <- pred_testset4_2 == test_set2$classe
+qplot(pitch_forearm,magnet_dumbbell_z,colour=correct4,data=test_set2)
+```
 
 ###Predicting on the Test Set
 We now use our different models to predict on the downloaded test set.  The results are the same for all models. 
